traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:8: error: ')' expected but ';' found.
      setPos(getX(),getY()-1; ecritMessage(cpt));
                            ^TraversalZigZag:8: error: ';' expected but ')' found.
      setPos(getX(),getY()-1; ecritMessage(cpt));
                                               ^